--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: plexhaven
 email: plexhaven@gmail.com
 baseurl: "/"
-# url: "http://plexhaven.github.io"
-url: "http://localhost:4000"
+url: "http://plexhaven.github.io"
 markdown: kramdown
 theme: minima
 flipmail: sESFh1SqK3B7UE3EE1Uu
